<resources>
    <string name="app_name">Ekhabeer</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <string name="users">Users</string>
    <string name="first_name">First Name</string>
    <string name="for_user">For User</string>
    <string name="for_consultant">For Consultant</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="postive_feedback">Positive Feedback</string>
    <string name="negative_feedback">Negative Feedback</string>
    <string name="helpus_improve">Helpus to improve</string>
    <string name="any_other_issue">Any other issue</string>
    <string name="qualification">Qualification</string>
    <string name="nationality">Nationality</string>
    <string name="last_name">Last name</string>
    <string name="accept_terms">Accept all the terms and conditions.</string>
    <string name="signup">Signup</string>
    <string name="register">Register</string>
    <string name="degree">Degree</string>
    <string name="booking_act">Booking</string>
    <string name="packages">Packages :-</string>
    <string name="doc_details">Doctor Details</string>
    <string name="gift_consul">Gift a Consultation</string>
    <string name="consultations">Consultations</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="doc_bio">Doctor’s Bio :-</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="select_type">Select the type :-</string>
    <string name="avail_docs">Available Doctors :-</string>
    <string name="family_name">Family name</string>
    <string name="middle_name">Middle name</string>
    <string name="name">Name</string>
    <string name="website">Website</string>
    <string name="smobileno">Second Mobile number</string>
    <string name="mobileno">Mobile number</string>
    <string name="dob">DOB</string>
    <string name="age">Age</string>
    <string name="send">Send</string>
    <string name="send_invite">Send Invite</string>
    <string name="change_pass">Change Password</string>
    <string name="another_username">Another Username</string>
    <string name="another_email">Another Email</string>
    <string name="gift_title">Gift Title</string>
    <string name="description">Description</string>
    <string name="special_code">Special Code</string>
    <string name="specialilty">Specialilty</string>
    <string name="certificates">Certificates</string>
    <string name="membership">Membership</string>
    <string name="old_pass">Password</string>
    <string name="new_pass">New Password</string>
    <string name="conf_new_pass">Confirm New Password</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="activities">Activities</string>
    <string name="est_cost">Estimated Cost</string>
    <string name="category">Category</string>
    <string name="response_time">Response time</string>
    <string name="address">Address</string>
    <string name="thirty_min_cost">30 min Cost</string>
    <string name="forty_five">45 min Cost</string>
    <string name="sixty_min_cost">60 min Cost</string>
    <string name="one_month_sub">1 Month sub</string>
    <string name="three_month_sub">3 Month sub</string>
    <string name="availablity">Availablity  -</string>
    <string name="medical">Medical</string>
    <string name="subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="diet_fitness">Diet and Fitness</string>
    <string name="psycology">Psycology</string>
    <string name="family_kids">Family and Kids</string>
    <string name="bussiness_invest">Bussiness and investements</string>
    <string name="law_leg">Law and Legislation</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="password">Password</string>
    <string name="timings">Timings</string>
    <string name="charges">Charges :</string>
    <string name="time">Time :-</string>
    <string name="date">Date :-</string>
    <string name="description_">Description :-</string>
    <string name="city_">City :-</string>
    <string name="fee">Fee :-</string>
    <string name="thirty_min_package">30 min</string>
    <string name="sixty_min_package">60 min</string>
    <string name="final_amount">Final Amount :-</string>
    <string name="one_month_package">1 Month</string>
    <string name="three_month_package">3 Months</string>
    <string name="scheduled">Scheduled</string>
    <string name="reviews_users">Reviews of users</string>
    <string name="unhappy_users">Unhappy users</string>
    <string name="repeated_users">Repeated users</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="select_date">Select a Date :</string>
    <string name="select_time">Select Time :</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="packages_avail">Packages also available</string>
    <string name="screen_one_title">All type of Doctors Available</string>
    <string name="screen_two_title">Book an Appointment</string>
    <string name="screen_three_title">Expert Doctors only</string>
    <string name="are_you_a">Are you a :-</string>
    <string name="change_lang">Change Language :</string>
    <string name="invite_text">Invite Friends and Get a 50% discount on your next consultation.</string>
    <string name="small_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="large_dummy_text">All Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s of Doctors Available</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_consul">Consultation</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_payment">Payment Details</string>
    <string name="menu_invite">Invite Friends</string>
    <string name="menu_happy">Happiness Center</string>
    <string name="menu_gift">Gift a Consultation</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
</resources>