<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_consul"
            android:icon="@drawable/ic_consultation"
            android:title="@string/menu_consul" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_friends"
            android:title="@string/menu_invite" />
        <item
            android:id="@+id/nav_happy"
            android:icon="@drawable/ic_happiness"
            android:title="@string/menu_happy" />
        <item
            android:id="@+id/nav_gift"
            android:icon="@drawable/ic_gift"
            android:title="@string/menu_gift" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>