<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".screens.ConsultLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/dumy_profile_pic"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/poppins_semibold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ll_bg"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_user"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_login"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:padding="@dimen/_5sdp"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:background="@drawable/ic_login_bg"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:padding="@dimen/_5sdp"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:background="@drawable/ic_login_bg"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/accept_terms"
                android:id="@+id/radioButton1"
                android:checked="false"
                android:textSize="10sp" />



        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_60sdp"
            android:layout_below="@+id/ll_login_fields"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_btn_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_centerInParent="true"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>


    </RelativeLayout>
    </LinearLayout>
</ScrollView>