<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.BookingActivity">

    <include
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/tv_booking_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"/>

    <RelativeLayout
        android:id="@+id/rl_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/rl_grey_bg">


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20 August 2020"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"/>

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"/>

    <RelativeLayout
        android:id="@+id/rl_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/rl_grey_bg">


        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9:00 AM"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"/>

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:horizontalSpacing="16dp"
            android:visibility="gone"
            android:verticalSpacing="12dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/packages"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rl_package_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/rl_grey_bg">

        <TextView
            android:id="@+id/tv_30_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty_min_package"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_package_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/rl_grey_bg">

        <TextView
            android:id="@+id/tv_60_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixty_min_package"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"/>

    </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_package_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/rl_grey_bg">

            <TextView
                android:id="@+id/tv_1_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_month_package"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_centerInParent="true"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_package_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/rl_grey_bg">

            <TextView
                android:id="@+id/tv_3_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_month_package"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_centerInParent="true"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_search_bg"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_amount"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_3sdp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_final_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_3sdp"
        android:text="0"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_pay_appointment"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/cardView_two"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/ic_red_btn_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_appointment"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

</LinearLayout>