<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/welcome_one_img"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_160sdp"
                android:background="@drawable/ll_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/large_dummy_text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/are_you_a"
                    />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:gravity="start"
                    android:id="@+id/radioGroup">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Consultant"
                        android:id="@+id/radioButton1"
                        android:checked="false"
                        android:textSize="16sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="User"
                        android:fontFamily="@font/poppins_semibold"
                        android:id="@+id/radioButton2"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:textSize="16sp"/>
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/change_lang"
                    />

                <RelativeLayout
                    android:id="@+id/rl_login"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/ic_btn_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorWhite"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_signup"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ic_btn_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorWhite"/>

                </RelativeLayout>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>