<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.ConsultationsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/colorRedText"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_consul_sech"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/scheduled"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/poppins_medium"/>

            <LinearLayout
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@color/colorWhite"/>

            <TextView
                android:id="@+id/tv_consul_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancelled"
                android:textSize="14sp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/poppins_medium"/>

            <LinearLayout
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@color/colorWhite"/>

            <TextView
                android:id="@+id/tv_consul_complete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textSize="14sp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/poppins_medium"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_consults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll_one"/>

    </RelativeLayout>

</LinearLayout>